# guacamayo-mex-plugins

./: autogen.sh  configure.ac
po/: POTFILES.in
src/: Makefile.am
src/clock/: guaca-clock.c  guaca-clock.h  guaca-timezone.c
src/system/: guaca-hostname.c  guaca-system.c  guaca-system.h
